# MCPServerKnowledgeGraph

./: .gitignore  README.md  design.md  pyproject.toml  requirements.md  tasks.md
docs/: usage-guide.md
src/kg_mcp/: __init__.py  server.py  utils.py
src/kg_mcp/graph/: __init__.py  analyzer.py  builder.py  models.py
src/kg_mcp/output/: __init__.py  formatter.py
src/kg_mcp/parsers/: __init__.py  config_parser.py  flask_parser.py  java_parser.py
tests/: test_config_parser.py  test_flask_parser.py  test_formatter.py  test_graph_builder.py  test_impact_analyzer.py  test_java_parser.py  test_properties.py
tests/fixtures/test_workspace/java-test/src/main/java/config/: ApiConfig.java
tests/fixtures/test_workspace/java-test/src/main/resources/: application.conf
tests/fixtures/test_workspace/java-test/src/test/java/: UserEntity.java  UserQst.java  UserTask.java  UserTest.java
tests/fixtures/test_workspace/python-svc/: __init__.py
tests/fixtures/test_workspace/python-svc/controllers/: risk_controller.py  user_controller.py
