[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kg-multi-project-mcp"
version = "0.1.0"
description = "MCP Server for cross-project API impact analysis using Knowledge Graph"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "pyhocon>=0.3.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
kg-mcp = "kg_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kg_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/kg_mcp"]
